--- a/src/scss/common/_utility.scss
+++ b/src/scss/common/_utility.scss
@@ -252,11 +252,6 @@ body:not(.is-editor):not(.is-admin) {
   }
 }
 
-.separator-dot {
-  color: var(--fg-800);
-  font-family: var(--ff-base);
-}
-
 .tooltipped {
   position: relative;
 
@@ -395,8 +390,13 @@ html:not(.logged-in) body:not(.logged-in) .hide-if-logged-out,
   clip-path: var(--header-polygon);
 }
 
+.separator-dot {
+  color: var(--fg-800);
+  font-family: var(--ff-base);
+}
+
 .pseudo-separator > *:where(:not(:first-child))::before {
-  content: var(--post-list-separator, '• ');
+  content: var(--pseudo-separator, '• ');
   color: var(--post-list-meta-divider-color, var(--fg-800));
   font-family: var(--ff-base);
   margin: 0 .125em;
