--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -123,9 +123,27 @@
   --del-background: var(--red-400);
   --del-color: var(--fg-inverted);
 
-  --caption-overlay-background: linear-gradient(0deg, rgb(0 0 0 / 70%), rgb(0 0 0 / 40%) 70%, transparent);
+  --caption-overlay-background: linear-gradient(
+    to top,
+    hsla(0, 0%, 0%, 0.7) 0%,
+    hsla(0, 0%, 0%, 0.691) 8.1%,
+    hsla(0, 0%, 0%, 0.666) 15.5%,
+    hsla(0, 0%, 0%, 0.627) 22.5%,
+    hsla(0, 0%, 0%, 0.577) 29%,
+    hsla(0, 0%, 0%, 0.519) 35.3%,
+    hsla(0, 0%, 0%, 0.454) 41.2%,
+    hsla(0, 0%, 0%, 0.385) 47.1%,
+    hsla(0, 0%, 0%, 0.315) 52.9%,
+    hsla(0, 0%, 0%, 0.246) 58.8%,
+    hsla(0, 0%, 0%, 0.181) 64.7%,
+    hsla(0, 0%, 0%, 0.123) 71%,
+    hsla(0, 0%, 0%, 0.073) 77.5%,
+    hsla(0, 0%, 0%, 0.034) 84.5%,
+    hsla(0, 0%, 0%, 0.009) 91.9%,
+    hsla(0, 0%, 0%, 0) 100%
+  );
   --caption-overlay-color: #fff;
-  --caption-padding: .3rem .5rem .5rem;
+  --caption-padding: 1.25rem .5rem .5rem;
 
   --progress-bar-background: var(--navigation-background);
   --progress-bar-color: var(--bg-200);
