--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -1183,6 +1183,11 @@ td.fictioneer_patreon_lock_amount {
   }
 }
 
+.bulk-edit-help {
+  float: left;
+  margin: 1em 0 .5em !important;
+}
+
 // ==============================================================================
 // FICTIONEER DIALOG MODALS
 // ==============================================================================
