--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ License: GNU General Public License v3.0 or later
 License URI: http://www.gnu.org/licenses/gpl.html
 
 Requires at least: 6.1.0
-Tested up to: 6.6.1
+Tested up to: 6.6.2
 Requires PHP: 7.4
-Version: 5.24.0
+Version: 5.24.1-beta1
 Text Domain: fictioneer
 
 Description: Standalone solution for publishing and reading web fictions.
