--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -248,7 +248,7 @@
       }
     }
 
-    :where(a, label):where(:not(._no-menu-item-style)) {
+    > :where(:first-child:not(._no-menu-item-style)) {
       position: relative;
       display: flex;
       align-items: center;
