Reenforce paragraph font size in content
Deals with some plugins.

--- a/src/scss/common/_formatting.scss
+++ b/src/scss/common/_formatting.scss
@@ -108,6 +108,8 @@ p a:not(.wp-element-button),
   }
 
   p {
+    font-size: inherit; // Deal with some plugins
+
     img {
       display: inline-block;
       height: auto;
