Increases litRPG box shadow from xs to s
Was a bit too thin in some cases.

--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -75,7 +75,7 @@
   // --litrpg-ins: var(--green-600);
   // --litrpg-del: var(--red-600);
   // --litrpg-polygon: polygon(8px 0, calc(100% - 8px) 0, 100% 8px, 100% calc(100% - 8px), calc(100% - 8px) 100%, 8px 100%, 0 calc(100% - 8px), 0 8px);
-  --litrpg-drop-shadow: var(--drop-shadow-xs);
+  --litrpg-drop-shadow: var(--drop-shadow-s);
 
   // === CONTENT LISTS =========================================================
 
