--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -326,7 +326,7 @@ button[type=submit]:where(:not(._inline)),
     font-size: 10px;
     line-height: 1;
     border-radius: var(--layout-border-radius-small);
-    padding: .25rem .35rem;
+    padding: .25rem min(max(.35rem, calc(var(--layout-border-radius-small) * 0.625)), 7px);
     text-shadow: none;
     width: fit-content;
     contain: layout paint style; // Improve performance
