Update modal close button CSS

--- a/src/scss/common/_modals.scss
+++ b/src/scss/common/_modals.scss
@@ -247,7 +247,7 @@
   font-size: 20px;
   line-height: 1;
   text-shadow: none;
-  padding: 7px 12px 8px 16px;
+  padding: 7px 12px;
   border-radius: 5px;
   transition: color var(--transition-duration);
 
