Update modal spacing

--- a/src/scss/common/_modals.scss
+++ b/src/scss/common/_modals.scss
@@ -42,8 +42,8 @@
   &__row {
     padding: 12px;
 
-    &._no-top {
-      padding-top: 0;
+    &._small-top {
+      padding-top: 4px;
     }
 
     &._vertical-shrink-spacing {
