--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -24,6 +24,7 @@
   --layout-link-color-hover: var(--card-link-color-hover, var(--fg-300));
   --this-spacing: min(var(--card-body-container-padding, clamp(0.75rem, 3.25cqw, 1.25rem)), 16px);
   --this-nested-border-radius: calc(var(--layout-border-radius-small) * var(--layout-nested-border-radius-multiplier, 1));
+  display: block;
   list-style: none;
   position: relative;
   border-radius: var(--layout-border-radius-small);
