Hide modal tooltip underline in print view

--- a/src/scss/_print.scss
+++ b/src/scss/_print.scss
@@ -23,6 +23,10 @@
     color: currentColor !important;
   }
 
+  .modal-tooltip {
+    text-decoration: none !important;
+  }
+
   article {
     padding: 0 !important;
   }
