--- a/src/scss/post-list.scss
+++ b/src/scss/post-list.scss
@@ -215,45 +215,8 @@
   }
 }
 
-.elementor {
+.elementor-element:has(.post-list) {
   @media only screen and (max-width: 767.999px) {
-    .post-list {
-      container-type: normal;
-
-      &-item {
-        &__title {
-          font-size: var(--post-list-title-font-size, #{get_clamp(13, 14, 320, 768)});
-        }
-
-        &__meta,
-        &__tax {
-          font-size: var(--post-list-meta-font-size, #{get_clamp(12, 13, 320, 768)});
-        }
-      }
-    }
-  }
-
-  @media only screen and (max-width: 639px) {
-    .post-list-item__title {
-      margin-right: 0;
-    }
-
-    :where(._floating-right) {
-      position: static;
-      opacity: 1;
-
-      &::before {
-        display: inline;
-      }
-    }
-  }
-
-  @media only screen and (max-width: 549.999px) {
-    .post-list-item__meta {
-      &-chapter,
-      &-in-story {
-        display: inline;
-      }
-    }
+    width: 100%;
   }
 }
